@@ -1,5 +1,6 @@
 serd (0.29.3) unstable;
 
+  * Clarify errors returned by serd_env_expand()
   * Fix reported error when reading statements with only a blank node
   * Fix parsing local names that end with escaped dots
   * Add serdi option to write ASCII output
@@ -13,7 +14,7 @@ serd (0.29.3) unstable;
   * Fix building with MSVC
   * Clean up testing code
 
- -- David Robillard <d@drobilla.net>  Thu, 08 Mar 2018 15:42:51 -0500
+ -- David Robillard <d@drobilla.net>  Sun, 27 May 2018 17:51:33 +0200
 
 serd (0.28.0) stable;
 
